WIP for #670